# ohtu-palautusrepositorio

./: README.md
viikko1/nhl-statistics-1/src/: index.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py
viikko1/riippuvuuksien-injektointi-1/: .gitignore  pyproject.toml
viikko2/: haara2.txt  muutos2_t9.txt  muutos_t9.txt  tracking_haara1.txt  tracking_haara2.txt
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/web-login/: .gitignore
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: register.robot  resource.robot
viikko4/: .nfs0000000000aebc7d00000162  retro.md
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/: ostoskori.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/src/: kayttoliittyma.py
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py  query_builder.py
viikko7/: referaatti.md
