[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = "Ohtu vk 2"
authors = ["SaijaGit <saija.piira@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_web"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
